# illusion

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  clang-format.sh  clang-tidy.sh  cloc.sh  lcov.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
examples/: CMakeLists.txt  RunAllExamples.sh.in  start.sh.in
examples/CommandLine/: main.cpp
examples/DeferredRendering/: Floor.cpp  Floor.hpp  Lights.cpp  Lights.hpp  ToneMapping.cpp  ToneMapping.hpp  main.cpp
examples/DeferredRendering/data/shaders/: Floor.frag  Floor.vert  Light.frag  Light.vert  Shading.frag  ToneMapping.frag
examples/DeferredRendering/data/textures/: README.md
examples/GPUInfo/: main.cpp
examples/GltfLoader/: main.cpp
examples/GltfViewer/: GltfModel.cpp  GltfModel.hpp  Turntable.cpp  Turntable.hpp  main.cpp
examples/GltfViewer/data/models/: README.md
examples/GltfViewer/data/shaders/: GltfShader.frag  GltfShader.vert  Skybox.frag  ToneMapping.glsl
examples/GltfViewer/data/textures/: README.md
examples/Headless/: main.cpp
examples/Headless/data/: Triangle.vert
examples/ModelViewer/: main.cpp
examples/PBR/: main.cpp
examples/ShaderSandbox/: main.cpp
examples/SignalSlot/: main.cpp
examples/SimpleGltf/: main.cpp
examples/SpecializationConstants/: main.cpp
examples/SpecializationConstants/data/: Triangle.frag  Triangle.vert
examples/TexturedCube/: main.cpp
examples/TexturedCube/data/textures/: README.md  box.dds
examples/TexturedQuad/: main.cpp
examples/TexturedQuad/data/shaders/: Quad.frag  Quad.ps  Quad.vert  Quad.vs
examples/Triangle/: main.cpp
examples/Voronoi/: Arc.cpp  Arc.hpp  Beachline.cpp  Beachline.hpp  Breakpoint.cpp  Breakpoint.hpp  BreakpointTree.cpp  BreakpointTree.hpp  Circle.cpp  Circle.hpp  Site.cpp  Site.hpp  Vector2f.cpp  Vector2f.hpp  VoronoiGenerator.cpp  VoronoiGenerator.hpp  main.cpp
examples/Voronoi/data/: Line.vert  Point.vert  Simple.frag
examples/data/shaders/: BRDFLuT.comp  CubemapQuad.frag  GltfShader.frag  GltfShader.vert  PBRShader.frag  PBRShader.vert  PanoToCube.comp  Quad.vert  Quad.vs  Sandbox.frag  SimpleGltfShader.frag  SimpleGltfShader.vert  Skybox.frag  TexturedCube.frag  TexturedCube.vert  TexturedQuad.frag  TexturedQuad.ps  TexturedQuad.vert  ToneMapping.glsl  Triangle.frag  Triangle.vert  VertexColors.frag  VertexColors.vert
src/Illusion/: CMakeLists.txt
src/Illusion/Core/: AnimatedProperty.cpp  AnimatedProperty.hpp  BitHash.hpp  CMakeLists.txt  Color.cpp  Color.hpp  CommandLine.cpp  CommandLine.hpp  CommandLineOptions.cpp  CommandLineOptions.hpp  EnumCast.hpp  FPSCounter.cpp  FPSCounter.hpp  File.cpp  File.hpp  Flags.hpp  Logger.cpp  Logger.hpp  MovingAverage.hpp  NamedObject.cpp  NamedObject.hpp  Property.hpp  Queue.hpp  RingBuffer.hpp  ScopedTimer.cpp  ScopedTimer.hpp  Signal.hpp  StaticCreate.hpp  ThreadPool.cpp  ThreadPool.hpp  Timer.cpp  Timer.hpp  Utils.cpp  Utils.hpp  filesystem.cpp  filesystem.hpp
src/Illusion/Graphics/: BackedBuffer.hpp  BackedImage.hpp  BindingState.cpp  BindingState.hpp  BindingTypes.cpp  BindingTypes.hpp  BufferCache.cpp  BufferCache.hpp  CMakeLists.txt  CoherentBuffer.cpp  CoherentBuffer.hpp  CoherentUniformBuffer.cpp  CoherentUniformBuffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  Context.cpp  Context.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorPoolCache.cpp  DescriptorPoolCache.hpp  DescriptorSet.cpp  DescriptorSet.hpp  DescriptorSetCache.cpp  DescriptorSetCache.hpp  DescriptorSetReflection.cpp  DescriptorSetReflection.hpp  Device.cpp  Device.hpp  DisplayPass.cpp  DisplayPass.hpp  Engine.cpp  Engine.hpp  FrameGraph.cpp  FrameGraph.hpp  FrameResource.hpp  FrameResourceIndex.cpp  FrameResourceIndex.hpp  Framebuffer.cpp  Framebuffer.hpp  (+57 more)
src/Illusion/Graphics/tmp/: CombinedImageSampler.hpp  Material.cpp  Material.hpp  PipelineLayout.cpp  PipelineLayout.hpp  ShaderReflection.cpp  ShaderReflection.hpp  StorageImage.hpp  Texture.cpp  Texture.hpp  UniformBuffer.hpp
src/Illusion/Input/: CMakeLists.txt  Enums.cpp  Enums.hpp  KeyEvent.cpp  KeyEvent.hpp  MouseEvent.cpp  MouseEvent.hpp
test/: CMakeLists.txt  RunAllTests.sh.in  main.cpp
test/Core/: TestBitHash.cpp  TestColor.cpp  TestCommandLine.cpp  TestFPSCounter.cpp  TestFile.cpp  TestFlags.cpp  TestNamedObject.cpp  TestProperty.cpp  TestScopedTimer.cpp  TestSignal.cpp  TestThreadPool.cpp  TestTimer.cpp  TestUtils.cpp
